# rules_nim

./: .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  flake.nix  rbit.patch
.github/workflows/: workflow.yaml
docs/: BUILD.bazel  repo_rules.md  rules.md
e2e/: BUILD.bazel  defs.bzl
e2e/c_invocation/: .bazelrc  BUILD.bazel  MODULE.bazel  main.nim  spec.nim
e2e/cross_compilation/: .bazelrc  BUILD  MODULE.bazel  cc.patch  fastbuild.patch  rules_cc.patch  rules_nixpkgs_cc.patch
e2e/cross_compilation/toolchains/: BUILD.bazel  defs.bzl
e2e/hermetic_cc_toolchain/: .bazelrc  BUILD  MODULE.bazel  README.md  WORKSPACE.bazel  nim_hermetic_cc_config.bzl
e2e/module/: .bazelrc  BUILD.bazel  WORKSPACE.bzlmod  main.nim  test.nimble
e2e/nim_cc_binary/: .bazelrc  BUILD  MODULE.bazel  default.nix  defs.bzl
e2e/nim_cc_binary_test/: BUILD  MODULE.bazel
e2e/nim_cc_library/: .bazelrc  BUILD.bazel  MODULE.bazel  lib_test.cpp  main.c  main.cpp  main_file.c  test.cpp
e2e/nim_cc_library/lib/: BUILD.bazel  lib.nim
e2e/nim_cc_library/others/: BUILD.bazel
e2e/nim_cc_test/: .bazelrc  BUILD  MODULE.bazel
e2e/nim_invocation_from_c/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  main.c
e2e/nimble/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE.bzlmod
e2e/nimble/bazel/: workspace_status.sh
e2e/nimble/src/: BUILD.bazel
e2e/nimble/src/nimblepkg/: sha1hashes.nim
e2e/nimble/tests/: BUILD.bazel  tcheckcommand.nim  testscommon.nim  tgetpaths.nim  tissues.nim  tlockfile.nim  tnimblerefresh.nim  tuninstall.nim
e2e/numericalnim/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE.bzlmod  compile.sh
e2e/numericalnim/tests/: BUILD.bazel  test_interpolate.nim  test_optimize.nim
e2e/smoke/: .bazelrc  BUILD  spec.nim
nim/: BUILD.bazel  attrs.bzl  defs.bzl  executable_impl.bzl  extensions.bzl  nim_cc_binary.bzl  nim_cc_library.bzl  nim_cc_test.bzl  nim_module.bzl  nimble.bzl  repositories.bzl  toolchain.bzl
nim/private/: BUILD.bazel  attrs.bzl  cc_compile_and_link.bzl  executable_impl.bzl  gen_versions.py  nim_cc_binary.bzl  nim_cc_library.bzl  nim_cc_test.bzl  nim_compile.bzl  nim_module.bzl  nimble_install.bzl  nimble_lock.bzl  nimrtl_file.bzl  providers.bzl  resolved_toolchain.bzl  toolchains_repo.bzl  versions.bzl
nim/private/nimble/: BUILD.bazel  nimble_install.bzl  nimble_lock.bzl  nimble_lock_update.bzl
nim/tests/: versions_test.bzl
nimrtl/: BUILD.bazel
