load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@rules_nim//nim/private:nimrtl_file.bzl", "nimrtl_file")
load("@rules_nim//nim:defs.bzl", "nim_cc_library")

filegroup(
    name = "local_repository_files",
    # Include every package that is required by the child workspaces.
    srcs = [
        # ".bazelignore",
        # ".bazelrc",
        "BUILD.bazel",
        "WORKSPACE.bazel",
        "MODULE.bazel",
        "//nim:all_files",
        "//nim/private:all_files",
    ],
    visibility = ["//visibility:public"],
)

write_file(
    name = "nimrtl_cfg",
    out = "nimrtl.cfg",
    content = [
        "threads:on",
        "app:lib",
        "warning:UnusedImport:off",
        "verbosity:0",
        "-d:createNimRtl",
        "-d:release",
    ],
)

nimrtl_file(
    name = "current_nimrtl"
)

nim_cc_library(
    name = "nimrtl_shared_lib",
    main = ":current_nimrtl",
    proj_cfg = "nimrtl_cfg",
)

cc_binary(
    name = "libnimrtl.so",
    deps = [
        ":nimrtl_shared_lib"
    ],
    linkshared = True,
)

cc_import(
    name = "nimrtl",
    deps = [
        ":nimrtl_shared_lib"
    ],
    shared_library = "libnimrtl.so",
    alwayslink = True,
    visibility = ["//visibility:public"],
)

# gazelle_binary(
#     name = "gazelle_bin",
#     languages = ["@bazel_skylib_gazelle_plugin//bzl"],
# )

# gazelle(
#     name = "gazelle",
#     gazelle = "gazelle_bin",
# )
