load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")

filegroup(
    name = "local_repository_files",
    # Include every package that is required by the child workspaces.
    srcs = [
        "BUILD.bazel",
        "MODULE.bazel",
        "WORKSPACE.bazel",
        "//nim:all_files",
        "//nim/private:all_files",
        "//nim/private/nimble:all_files",
        "//nimrtl:all_files",
    ],
    visibility = ["//visibility:public"],
)

gazelle_binary(
    name = "gazelle_bin",
    languages = ["@bazel_skylib_gazelle_plugin//bzl"],
)

gazelle(
    name = "gazelle",
    gazelle = "gazelle_bin",
)
