"rules_nim"

module(
    name = "rules_nim",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.17")

# TODO: this can be a dev_dependency if custom copy to workspace rule is on place.
bazel_dep(name = "bazel_lib", version = "3.2.1")

bazel_dep(name = "gazelle", version = "0.47.0", dev_dependency = True, repo_name = "bazel_gazelle")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.9.0", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.2", dev_dependency = True)
bazel_dep(name = "rules_bazel_integration_test", version = "0.37.1", dev_dependency = True)
single_version_override(
    module_name = "rules_bazel_integration_test",
    patch_strip = 1,
    patches = [
        "rbit.patch",
    ],
)

bazel_binaries = use_extension(
    "@rules_bazel_integration_test//:extensions.bzl",
    "bazel_binaries",
    dev_dependency = True,
)
bazel_binaries.download(version_file = "//:.bazelversion")
use_repo(bazel_binaries, "bazel_binaries", "bazel_binaries_bazelisk", "build_bazel_bazel_.bazelversion")

nim = use_extension("@rules_nim//nim:extensions.bzl", "nim", dev_dependency = True)
nim.toolchain(nim_version = "2.2.6")
use_repo(nim, "nim_toolchains")

register_toolchains(
    "@nim_toolchains//:all",
    dev_dependency = True,
)
