# This load statement must be in the docs/ package rather than anything users depend on
# so that the dependency on stardoc doesn't leak to them.
load("@aspect_bazel_lib//lib:docs.bzl", "stardoc_with_diff_test", "update_docs")

stardoc_with_diff_test(
    name = "rules",
    bzl_library_target = "//nim:defs",
)

stardoc_with_diff_test(
    name = "repo_rules",
    bzl_library_target = "//nim:nimble",
)

update_docs(
    name = "update",
    # in_file = ":rules",
    # out_file = "rules.md",
    # files = {
    #     "rules.md": ":rules",
    # },
)
