load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//nim/private:resolved_toolchain.bzl", "resolved_toolchain")

# For stardoc to reference the files
exports_files([
    "defs.bzl",
    "nimble.bzl",
])

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//visibility:public"],
)

# This is the target rule authors should put in their "toolchains"
# attribute in order to get a runtime for the correct platform.
# See https://docs.bazel.build/versions/main/toolchains.html#writing-rules-that-use-toolchains
toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

resolved_toolchain(
    name = "resolved_toolchain",
    # Marked manual so that `bazel test //...` passes
    # even if no toolchain is registered.
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//nim/private:toolchains_repo",
        "//nim/private:versions",
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    visibility = ["//visibility:public"],
    deps = [":repositories"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@rules_nim//nim/private:nim_cc_binary",
        "@rules_nim//nim/private:nim_cc_library",
        "@rules_nim//nim/private:nim_cc_test",
        "@rules_nim//nim/private:nim_module",
    ],
)

bzl_library(
    name = "nimble",
    srcs = ["nimble.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@rules_nim//nim/private:nimble_install",
        "@rules_nim//nim/private:nimble_lock",
    ],
)

bzl_library(
    name = "nimble_lock",
    srcs = ["nimble_lock.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "toolchain",
    srcs = ["toolchain.bzl"],
    visibility = ["//visibility:public"],
)
