load("@rules_nim//nim:defs.bzl", "nim_cc_binary", "nim_cc_test")
load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "logic",
    srcs = ["logic.c"],
    linkstatic = True,
)

nim_cc_test(
    name = "spec",
    main = "spec.nim",
    deps = [
        ":logic",
    ],
)

nim_cc_binary(
    name = "bin",
    main = "main.nim",
    deps = [
        ":logic",
    ],
)
