bazel_dep(name = "rules_nim", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.8.2", dev_dependency = True)

local_path_override(
    module_name = "rules_nim",
    path = "../..",
)

nim = use_extension("@rules_nim//nim:extensions.bzl", "nim")
nim.toolchain(nim_version = "2.2.6")
nim.toolchain(name = "nim_2_0", nim_version = "2.0.16")
use_repo(nim, "nim_toolchains", "nim_2_0_toolchains")

register_toolchains("@nim_toolchains//:all")
register_toolchains("@nim_2_0_toolchains//:all")
