RULES_NIX_PKGS_VERSION = "0.13.0"

bazel_dep(name = "rules_nim", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "platforms", version = "1.0.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.8.2", dev_dependency = True)

bazel_dep(name = "rules_cc", version = "0.2.11")
bazel_dep(name = "rules_nixpkgs_cc")
bazel_dep(name = "rules_nixpkgs_core", version = RULES_NIX_PKGS_VERSION)

archive_override(
    module_name = "rules_nixpkgs_cc",
    integrity = "sha256-MCcfe9OA5OIOTXEywySUbE/bwx6+C7tmOKD2GjfnQ5c=",
    strip_prefix = "rules_nixpkgs-{}/toolchains/cc".format(RULES_NIX_PKGS_VERSION),
    urls = [
        "https://github.com/tweag/rules_nixpkgs/releases/download/v0.13.0/rules_nixpkgs-{}.tar.gz".format(RULES_NIX_PKGS_VERSION),
    ],
)

local_path_override(
    module_name = "rules_nim",
    path = "../..",
)

nim = use_extension("@rules_nim//nim:extensions.bzl", "nim")
nim.toolchain(nim_version = "2.2.2")
use_repo(nim, "nim_toolchains")

register_toolchains("@nim_toolchains//:all")

nix_repo = use_extension("@rules_nixpkgs_core//extensions:repository.bzl", "nix_repo")
nix_repo.file(
    name = "nixpkgs",
    file = "//:nixpkgs.nix",
    file_deps = ["//:flake.lock"],
)
use_repo(nix_repo, "nixpkgs")

non_module_deps = use_extension("//toolchains:defs.bzl", "non_module_deps")
use_repo(
    non_module_deps,
    "gcc_14_aarch64_linux",
    "gcc_14_aarch64_linux_info",
    "gcc_14_aarch64_linux_toolchains",
)

register_toolchains(
    "@gcc_14_aarch64_linux_toolchains//:all",
)
