RULES_NIX_PKGS_VERSION = "0.13.0"

bazel_dep(name = "rules_nim", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "platforms", version = "1.0.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.9.0", dev_dependency = True)

bazel_dep(name = "bazel_lib", version = "3.2.0")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_nixpkgs_cc")
bazel_dep(name = "rules_nixpkgs_core", version = RULES_NIX_PKGS_VERSION)
single_version_override(
    module_name = "rules_nixpkgs_core",
    patch_strip = 1,
    patches = [
        "//:core.patch",
    ],
)

archive_override(
    module_name = "rules_nixpkgs_cc",
    integrity = "sha256-MCcfe9OA5OIOTXEywySUbE/bwx6+C7tmOKD2GjfnQ5c=",
    patch_args = [
        "-p1",
    ],
    patches = [
        "//:cc.patch",
        "//:rules_cc.patch",
        "//:fastbuild.patch",
    ],
    strip_prefix = "rules_nixpkgs-{}/toolchains/cc".format(RULES_NIX_PKGS_VERSION),
    urls = [
        "https://github.com/tweag/rules_nixpkgs/releases/download/v0.13.0/rules_nixpkgs-{}.tar.gz".format(RULES_NIX_PKGS_VERSION),
    ],
)

local_path_override(
    module_name = "rules_nim",
    path = "../..",
)

nim = use_extension("@rules_nim//nim:extensions.bzl", "nim")
nim.toolchain(nim_version = "2.2.6")
nim.toolchain(
    name = "nim_2_0",
    nim_version = "2.0.16",
)
use_repo(nim, "nim_2_0_toolchains", "nim_toolchains")

register_toolchains("@nim_toolchains//:all")

register_toolchains("@nim_2_0_toolchains//:all")

nix_repo = use_extension("@rules_nixpkgs_core//extensions:repository.bzl", "nix_repo")
nix_repo.file(
    name = "nixpkgs",
    file = "//:nixpkgs.nix",
    file_deps = ["//:flake.lock"],
)
use_repo(nix_repo, "nixpkgs")

nix_pkg = use_extension("@rules_nixpkgs_core//extensions:package.bzl", "nix_pkg")
nix_pkg.attr(
    name = "file",
    attr = "file",
    repo = "@nixpkgs",
)
use_repo(nix_pkg, "file")

non_module_deps = use_extension("//toolchains:defs.bzl", "non_module_deps")
use_repo(
    non_module_deps,
    "gcc_14_aarch64_linux",
    "gcc_14_aarch64_linux_info",
    "gcc_14_aarch64_linux_toolchains",
)

register_toolchains(
    "@gcc_14_aarch64_linux_toolchains//:all",
)
