bazel_dep(name = "rules_nim", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.7.1", dev_dependency = True)
bazel_dep(name = "rules_nixpkgs_core", version = "0.12.0", dev_dependency = True)
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_cc", version = "0.0.10")
bazel_dep(name = "rules_nixpkgs_cc")

local_path_override(
    module_name = "rules_nim",
    path = "../..",
)
# fix for extra_flags_per_feature, not published yet to BCR
# https://github.com/tweag/rules_nixpkgs/commit/2e0ba5493bc07c40b365bd07334a6477754a6062
RULES_NIX_PKGS_VERSION = "928f28a41218fb81a3043facd7f8b7ce3294997c"
archive_override(
    module_name = "rules_nixpkgs_core",
    urls = ["https://github.com/tweag/rules_nixpkgs/archive/{}.tar.gz".format(RULES_NIX_PKGS_VERSION)],
    strip_prefix = "rules_nixpkgs-{}/core".format(RULES_NIX_PKGS_VERSION),
    integrity = "sha256-R8WgrdWLsUyVwC/MjV2h86FKPjQ5bbAbOpiD7mQqn8U="
)

# Not yet available in the bazel central registry.
archive_override(
    module_name = "rules_nixpkgs_cc",
    urls = [
        "https://github.com/tweag/rules_nixpkgs/releases/download/v{0}/rules_nixpkgs-{0}.tar.gz".format(RULES_NIX_PKGS_VERSION),
        "https://github.com/tweag/rules_nixpkgs/archive/{}.tar.gz".format(RULES_NIX_PKGS_VERSION)
    ],
    strip_prefix = "rules_nixpkgs-{}/toolchains/cc".format(RULES_NIX_PKGS_VERSION),
    integrity = "sha256-R8WgrdWLsUyVwC/MjV2h86FKPjQ5bbAbOpiD7mQqn8U="
)

nix_repo = use_extension("@rules_nixpkgs_core//extensions:repository.bzl", "nix_repo")
nix_repo.file(
    name = "nixpkgs",
    file = "//:nixpkgs.nix",
    file_deps = ["//:flake.lock"],
)
use_repo(nix_repo, "nixpkgs")

non_module_deps = use_extension(":defs.bzl", "non_module_deps")
use_repo(
    non_module_deps,
    "clang_18",
    "clang_18_info",
    "clang_18_toolchains",
)
register_toolchains(
    "@clang_18_toolchains//:all",
)
