
cc_test(
    name = "lib_test",
    size = "small",
    srcs = [
        "lib_test.cpp",
    ],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "//others:lib",
    ],
)

cc_binary(
    name = "bin",
    deps = [
        "//others:lib"
    ],
    srcs = ["main.c"],
)
