cc_test(
    name = "lib_test",
    size = "small",
    srcs = [
        "lib_test.cpp",
    ],
    deps = [
        "//others:lib",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "bin",
    srcs = ["main.c"],
    deps = [
        "//others:lib",
    ],
)
