bazel_dep(name = "rules_nim", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.7.1", dev_dependency = True)

# bazel_dep(name = "hermetic_cc_toolchain", version)

# local_path_override(
#     module_name = "hermetic_cc_toolchain",
#     # Local copy of https://github.com/fmtlib/fmt at some newer commit as 10.1.1
#     # Does not have a MODULE.bazel file
#     path = "/home/kczulko/Projects/hermetic_cc_toolchain",
# )


# toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
# use_repo(toolchains, "zig_sdk")

# register_toolchains(
#     "@zig_sdk//toolchain:linux_amd64_gnu.2.28",
# )

local_path_override(
    module_name = "rules_nim",
    path = "../..",
)
