load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@aspect_bazel_lib//lib:expand_template.bzl", "expand_template")

write_file(
    name = "template",
    out = "expected.git.hash.tmpl",
    content = [
        "git hash: STABLE_GIT_HEAD",
        "",
    ],
)

expand_template(
    name = "expected",
    out = "expected.git.hash",
    stamp = 1,
    stamp_substitutions = {
        "STABLE_GIT_HEAD": "{{STABLE_GIT_HEAD}}",
    },
    template = ":template",
)

genrule(
    name = "current",
    srcs = [],
    outs = ["current.git.hash"],
    cmd = """./$(execpath //src:nimble) --version | grep hash > $@""",
    tools = ["//src:nimble"],
    local = True,
)

diff_test(
    name = "spec",
    file1 = ":expected",
    file2 = ":current",
)
