load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@bazel_skylib//rules:write_file.bzl", "write_file")

exports_files(["nimble.nimble"])

genrule(
    name = "nimble_version_from_file",
    srcs = [],
    outs = ["nimble_file.version"],
    cmd = """cat $(location //:nimble.nimble) | \
      grep version | \
      $(location @gawk//:bin/awk) '{print $$3}' | \
      tr -d '"' > $@""",
    tools = [
        "//:nimble.nimble",
        "@gawk//:bin/awk",
    ],
)

genrule(
    name = "nimble_version_from_executable",
    srcs = [],
    outs = ["current_nimble.version"],
    cmd = """./$(execpath //src:nimble) --version | \
       grep 'compiled at' | \
       $(location @gawk//:bin/awk) '{print $$2}' | \
       tr -d 'v' > $@""",
    tools = [
        "//src:nimble",
        "@gawk//:bin/awk",
    ],
)

diff_test(
    name = "spec",
    file1 = ":nimble_version_from_file",
    file2 = ":nimble_version_from_executable",
)
