load("@rules_nim//nim:defs.bzl", "nim_module", "nimble_lock_update")

nim_module(
    name = "numericalnim",
    srcs = glob(["src/**/*.nim"]),
    strip_import_prefix = "src",
    visibility = ["//visibility:public"],
)

nimble_lock_update(
    name = "update",
    nimble_repo = "@nimble",
    nimble_lock_file = "nimble.lock",
)
