bazel_dep(name = "rules_nim", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.7.1", dev_dependency = True)
bazel_dep(name = "rules_nixpkgs_core", version = "0.12.0", dev_dependency = True)

bazel_dep(name = "aspect_bazel_lib", version = "2.9.4")

local_path_override(
    module_name = "rules_nim",
    path = "../..",
)

nim = use_extension("@rules_nim//nim:extensions.bzl", "nim")
nim.toolchain(nim_version = "2.2.0")
use_repo(nim, "nim_toolchains")

register_toolchains("@nim_toolchains//:all")

nimble = use_extension("@rules_nim//nim:extensions.bzl", "nimble")
nimble.lock(
    name = "nimble",
    lock_file = "//:nimble.lock",
)
use_repo(nimble, "nimble")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "measuremancer",
    build_file_content =
        """load("@rules_nim//nim:defs.bzl", "nim_module")
nim_module(
    name = "measuremancer",
    srcs = glob(["**/*.nim"]),
    visibility = ["//visibility:public"],
)""",
    integrity = "sha256-9/PDao5uR2IwFKmUL5oDYz/Gt4wRDMwp4aAv24HGtKg=",
    strip_prefix = "Measuremancer-0.2.8",
    url = "https://github.com/SciNim/Measuremancer/archive/refs/tags/v0.2.8.tar.gz",
)

nix_repo = use_extension("@rules_nixpkgs_core//extensions:repository.bzl", "nix_repo")

nix_pkg = use_extension("@rules_nixpkgs_core//extensions:package.bzl", "nix_pkg")

nix_repo.file(
    name = "nixpkgs",
    file = "//:nixpkgs.nix",
    file_deps = ["//:flake.lock"],
)
use_repo(nix_repo, "nixpkgs")

nix_pkg.attr(
    name = "openblas",
    attr = "openblas",
    build_file_content = """
cc_library(
    name = "openblas",
    srcs = glob(["lib/*.so*"]),
    visibility = ["//visibility:public"],
)""",
    repo = "@nixpkgs",
)
use_repo(nix_pkg, "openblas")
