load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@rules_nim//nim:defs.bzl", "nim_cc_library")

write_file(
    name = "libnim_proj_cfg",
    out = "proj_cfg.cfg",
    content = [
        "app:lib",
        "noMain",
        "header",
        "deadCodeElim:on",
        "app:lib",
        "-d:useNimRtl",
        "-d:release",
        "-d:nimDebugDlOpen",
        "cc:gcc",
    ],
)

nim_cc_library(
    name = "lib",
    main = "lib.nim",
    proj_cfg = ":libnim_proj_cfg",
    visibility = ["//visibility:public"],
    deps = [
        "@rules_nim//nimrtl",
    ],
)
