load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@rules_nim//nim:defs.bzl", "nim_cc_binary", "nim_module")

write_file(
    name = "nimble_cfg",
    out = "nimble_cfg.cfg",
    content = [
        "-d:ssl",
        "-d:nimcore",
        "-d:release",
        "-d:nimDebugDlOpen",
        "hint:XDeclaredButNotUsed:off",
        "hint:Conf:off",
        "hint:SuccessX:off",
        "warning:Deprecated:off",
        "warning:UnreachableElse:off",
        "warning:User:off",
    ],
)

nim_module(
    name = "nimblepkg",
    srcs = ["//:nimble.nimble"] + glob(["nimblepkg/**/*"]),
    strip_import_prefix = "src",
    visibility = ["//visibility:public"],
)

nim_cc_binary(
    name = "nimble",
    copts = [
        "-Wno-unused-but-set-variable",
        "-Wno-discarded-qualifiers",
        "-Wno-unused-label",
        "-Wno-parentheses",
        "-Wno-strict-aliasing",
        "-Wno-maybe-uninitialized",
        "-msse4.1",
        "-mpclmul",
    ],
    main = "nimble.nim",
    proj_cfg = ":nimble_cfg",
    visibility = ["//visibility:public"],
    deps = [
        ":nimblepkg",
        "@checksums",
        "@openssl",
        "@sat",
        "@zippy",
    ],
)
