load("@rules_nim//nim:defs.bzl", "nim_cc_test")
load("@bazel_skylib//rules:write_file.bzl", "write_file")

[
    nim_cc_test(
      name = name,
      main = "{}.nim".format(name),
      deps = [
          "//:numericalnim",
          "@measuremancer",
          "@nimble//:arraymancer",
          "@nimble//:nimblas",
          "@nimble//:nimlapack",
          "@nimble//:zip",
          "@nimble//:untar",
          "@nimble//:stb_image",
          "@nimble//:cdt",
          "@openblas",
      ],
    )
    for name in [
        "test_vector",
        "test_utils",
        "test_optimize",
        "test_ode",
        "test_interpolate",
        "test_integrate",
        "test_differentiate",
    ]
]
