load("@rules_nim//nim:defs.bzl", "nim_cc_test")

[
    nim_cc_test(
        name = name,
        main = "{}.nim".format(name),
        deps = [
            "//:numericalnim",
            "@measuremancer",
            "@nimble//:arraymancer",
            "@nimble//:cdt",
            "@nimble//:nimblas",
            "@nimble//:nimlapack",
            "@nimble//:stb_image",
            "@nimble//:untar",
            "@nimble//:zip",
            "@openblas",
        ],
    )
    for name in [
        "test_vector",
        "test_utils",
        "test_optimize",
        "test_ode",
        "test_interpolate",
        "test_integrate",
        "test_differentiate",
    ]
]
